Pass GpuPreferences to in-process GPU in Mash

GPU service uses GpuPreferences::texture_target_exception_list when
allocating memory buffers for clients. This info needs to be passed to
GPU when it is initialized. Currently, this is not happening in
Multi-Process Mash. This CL passes in this information for in-process
GPU mode which is currently the default mode in Multi-Process Mash.

BUG=906171

Change-Id: I58616db0cba949c3aad8e850aec2c4a8651bab6d
Reviewed-on: https://chromium-review.googlesource.com/c/1342940
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Mohsen Izadi <mohsen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614171}
Former-commit-id: b6ef3ba2a3c1ac18be9b01caff6d2acdf78cca55